--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,7 @@
-$PrimaryColor: #2F4858;
+$PrimaryColor: #A1CF5F;
 $SecondColor: #A1CF5F;
+$PrimaryText: #1C2410;
+$SecondText: #7F7F73;
 
 @font-face {
   font-family: "light";
@@ -23,293 +25,22 @@ $SecondColor: #A1CF5F;
 
 body {
   overflow-x: hidden;
-  direction: rtl;
+  direction: ltr;
+}
+.btn {
+  padding: .75rem;
+  font-size: .8rem;
+}
+ul {
+  padding: 0;
 }
 .swal2-title {
   font-family: "semibold";
 }
-.mswak {
-  .floating_img {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 300px;
-    height: 180px;
-    pointer-events: none;
-  }
 
-  .col-xl-7 {
-    z-index: 999;
-  }
+@import "./navBar.scss";
+@import "./footer.scss";
 
-  .mswak_img {
-    width: 150px;
-    height: 150px;
-    margin-bottom: 1.5rem;
-  }
 
-  h1 {
-    font-family: "semibold";
-    color: $PrimaryColor;
-    width: 55%;
 
-    p {
-      color: $SecondColor;
-      display: inline-block;
-    }
-  }
-
-  .mswak_text {
-    font-family: "regular";
-    color: #43493A;
-    width: 70%;
-    margin: 1.5rem 0;
-    font-size: .8rem;
-  }
-
-  .form_card_register {
-    width: 107%;
-
-    .card_register {
-      background-color: #ffff;
-      box-shadow: -0.52px 5px 27px rgba(204, 204, 204, .32);
-      padding: 2rem;
-      border-radius: 10px;
-      position: relative;
-
-      .form-group {
-        margin-bottom: 1.5rem;
-        position: relative;
-
-        label {
-          font-family: "semibold";
-          color: #000;
-          margin-bottom: .5rem;
-        }
-
-        svg {
-          color: #707070;
-          position: absolute;
-          top: 57%;
-          right: 3%;
-          z-index: 999;
-        }
-
-        input {
-          font-family: "regular";
-          font-size: .8rem;
-          padding: .75rem;
-          padding-inline-start: 1.7rem !important;
-          background-color: #FAFAFA;
-        }
-
-        .bootstrap-select {
-          .btn {
-            background-color: #FAFAFA !important;
-            border: 1px solid #ced4da;
-
-            &:hover {
-              background-color: #FAFAFA !important;
-            }
-          }
-
-          .dropdown-toggle {
-            .filter-option-inner-inner {
-              text-align: start;
-              font-family: "regular";
-              font-size: .8rem;
-              padding: .6rem;
-              padding-inline-start: 1.3rem !important;
-            }
-          }
-
-          .dropdown-menu {
-            li {
-              text-align: start;
-              font-family: "regular";
-              font-size: .9rem;
-            }
-          }
-
-          .dropdown-item.active,
-          .dropdown-item:active {
-            background-color: $PrimaryColor;
-          }
-        }
-      }
-
-      .floating_circle_bottom {
-        position: absolute;
-        left: 5%;
-        bottom: -25%;
-        width: 150px;
-        height: 150px;
-        z-index: -1;
-      }
-    }
-  }
-
-  .submit_btn {
-    background-color: $PrimaryColor;
-    color: #fff;
-    font-family: "semibold";
-    font-size: .8rem;
-    padding: .6rem 2.5rem;
-    margin-top: 2rem;
-    transition: .7s ease-in-out;
-
-    &:hover {
-      background-color: transparent;
-      border: 1px solid $PrimaryColor;
-      color: $PrimaryColor;
-      transition: .7s ease-in-out;
-    }
-  }
-
-  .swiper {
-    width: 100%;
-    height: 500px;
-
-    .floating_circle {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 200px;
-      height: 200px;
-    }
-
-    .swiper-wrapper {
-      width: 90%;
-
-      .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-
-        /* Center slide text vertically */
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-
-        img {
-          display: block;
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
-      }
-    }
-  }
-
-  .swiper-pagination-vertical.swiper-pagination-bullets,
-  .swiper-vertical>.swiper-pagination-bullets {
-    left: 5%;
-    right: unset;
-  }
-
-  .swiper-pagination-bullet {
-    background-color: #DEDEDE;
-    transform: scale(1.5);
-    opacity: 1;
-    margin-bottom: 1rem !important;
-  }
-
-  .swiper-pagination-bullet-active {
-    background-color: #A1CF5F;
-    transform: scale(2);
-    margin-bottom: 1.2rem !important;
-  }
-
-  .mobile_preview_swiper {
-    display: none;
-  }
-  .laptop_preview_swiper {
-    display: block;
-  }
-}
-
-@media only screen and (max-width: 991.98px) {
-  .mswak {
-    .mswak_img {
-      display: block;
-      margin: 0 auto 1.5rem;
-    }
-
-    h1 {
-      text-align: center;
-      margin: 0 auto;
-      width: 100%;
-      font-size: 1.5rem;
-    }
-    .mswak_text {
-      text-align: center;
-      margin: 0 auto 1.5rem;
-      width: 90%;
-    }
-
-    .form_card_register {
-      margin-bottom: 2rem;
-      width: 100%;
-
-      .card_register {
-        .floating_circle_bottom {
-          display: none;
-        }
-
-        .form-group {
-          svg {
-            right: 1%;
-          }
-        }
-      }
-    }
-
-    .floating_img {
-      display: none;
-    }
-
-    .swiper {
-      margin-bottom: 2rem;
-
-      .swiper-wrapper {
-        height: 90%;
-      }
-
-      .swiper-pagination {
-        bottom: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .swiper-pagination-bullet {
-        margin: 0 .5rem 1rem !important;
-      }
-    }
-    .submit_btn {
-      margin: 2rem auto 0;
-      display: block;
-    }
-
-    .mobile_preview_swiper {
-      display: block;
-    }
-    .laptop_preview_swiper {
-      display: none;
-    }
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .mswak .form_card_register .card_register .form-group svg {
-    right: 2%;
-  }
-}
+@import "./_responsive.scss";
