--- a/sass/_navBar.scss
+++ b/sass/_navBar.scss
@@ -1,68 +1,311 @@
 .navbar-top {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    padding: 1rem 0;
-    background-color: #F7F7F7;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  padding: 0.5rem 0;
+  background-color: #f7f7f7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9;
+  .container {
     display: flex;
-    justify-content: center;
+    padding-inline-start: 20%;
+    justify-content: space-between;
+  }
+  .contact_details {
+    display: flex;
     align-items: center;
     .email {
-        color: $SecondText;
-        font-size: .8rem;
-        padding: 0 .5rem;
-        display: flex;
-        align-items: center;
-        border-inline-end: 1px solid $SecondText;
-        font-family: "regular";
-        text-decoration: none;
-        svg {
-            color: $PrimaryColor;
-            font-size: 1rem;
-            margin-inline-end: .5rem;
-        }
+      color: $SecondText;
+      font-size: 0.8rem;
+      padding: 0 0.5rem;
+      display: flex;
+      align-items: center;
+      border-inline-end: 1px solid $SecondText;
+      font-family: "regular";
+      text-decoration: none;
+      svg {
+        color: $PrimaryColor;
+        font-size: 1rem;
+        margin-inline-end: 0.5rem;
+      }
     }
     .url {
-        padding: 0 .5rem;
-        color: $SecondText;
-        font-size: .8rem;
-        font-family: "regular";
-        text-decoration: none;
+      padding: 0 0.5rem;
+      color: $SecondText;
+      font-size: 0.8rem;
+      font-family: "regular";
+      text-decoration: none;
     }
     .phone {
-        margin-inline-start: 2rem;
-        color: $SecondText;
-        font-size: .8rem;
-        padding: 0 .5rem;
-        display: flex;
-        align-items: center;
-        font-family: "regular";
-        text-decoration: none;
-        svg {
-            color: $PrimaryColor;
-            font-size: 1rem;
-            margin-inline-end: .5rem;
-        }
+      margin-inline-start: 2rem;
+      color: $SecondText;
+      font-size: 0.8rem;
+      padding: 0 0.5rem;
+      display: flex;
+      align-items: center;
+      font-family: "regular";
+      text-decoration: none;
+      svg {
+        color: $PrimaryColor;
+        font-size: 1rem;
+        margin-inline-end: 0.5rem;
+      }
     }
+  }
+
+  .socialicon {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 0;
+    li {
+      list-style: none;
+      margin: 7px 0 !important;
+      a {
+        width: 30px;
+        height: 30px;
+        background-color: transparent;
+        border: 1px solid $PrimaryColor;
+        text-align: center;
+        line-height: 25px;
+        font-size: 15px;
+        margin: 0 5px;
+        display: block;
+        border-radius: 50%;
+        position: relative;
+        overflow: hidden;
+        z-index: 1;
+        .icon {
+          position: relative;
+          color: $PrimaryColor;
+          transition: 0.5s;
+          z-index: 3;
+        }
+        &:hover {
+          background-color: $PrimaryColor;
+          .icon {
+            color: #fff;
+            transform: rotateY(360deg);
+          }
+          :before {
+            top: 0;
+          }
+        }
+        &:before {
+          content: "";
+          position: absolute;
+          top: 100%;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: #f00;
+          transition: 0.5s;
+          z-index: 2;
+        }
+      }
+    }
+  }
 }
 .navbar {
-    margin-top: 3rem;
-    position: relative;
-    .navbar-brand {
-        margin-inline-end: 5rem;
-        .logo {
-            width: 100px;
-            margin-top: -2rem;
+  margin-top: 3.5rem;
+  position: relative;
+  z-index: 10;
+  .navbar-brand {
+    margin-inline-end: 5rem;
+    .logo {
+      width: 100px;
+      margin-top: -2rem;
+    }
+  }
+  .navbar-collapse {
+    justify-content: end;
+    .nav-item {
+      margin-inline-end: 1rem;
+      .nav-link {
+        color: #5b6152;
+        font-family: "regular";
+        &.dropdown-toggle {
+          &::after {
+            transform: rotate(270deg);
+            color: $PrimaryColor;
+          }
         }
+      }
+      .dropdown-menu {
+        .dropdown-item {
+          font-family: "regular";
+        }
+      }
+    }
+  }
+  .navbar-nav {
+    margin-inline-end: 2rem;
+  }
+  .auth {
+    display: flex;
+    align-items: center;
+    .signup_btn {
+      color: $PrimaryColor;
+      border-color: $PrimaryColor;
+      padding: 0.5rem 1.5rem;
+      transition: 0.7s ease-in-out;
+      font-family: "regular";
+      margin-inline-end: 1rem;
+      &:hover {
+        background-color: $PrimaryColor;
+        color: #fff;
+        transition: 0.7s ease-in-out;
+      }
+    }
+    .login_btn {
+      color: $PrimaryText;
+      font-family: "regular";
+      border-inline-end: 1px solid #bfbfbf;
+      border-inline-start: 1px solid #bfbfbf;
+      border-radius: 0;
+      padding: 0.5rem 1.5rem;
+      margin-inline-end: 1rem;
+      &:hover {
+        border-color: transparent;
+        border-inline-end: 1px solid #bfbfbf;
+        border-inline-start: 1px solid #bfbfbf;
+      }
+    }
+    .lang {
+      .dropdown-toggle {
+        &:hover {
+          border-color: transparent;
+        }
+        &.show,
+        &:active {
+          border-color: transparent;
+          &:focus {
+            box-shadow: unset;
+          }
+        }
+      }
+      .dropdown-menu {
+        .dropdown-item {
+          font-family: "regular";
+          font-size: 0.8rem;
+        }
+      }
+    }
+  }
+}
+
+
+/* ======= Small laptop ======= */
+@media only screen and (max-width: 1200px) {
+  .navbar {
+    .container {
+      max-width: 100%;
+    }
+    .navbar-brand {
+      margin-inline-end: 1rem;
+    }
+    .navbar-nav {
+      margin-inline-end: 1rem;
+    }
+    .auth {
+      .lang {
+        .dropdown-menu[data-bs-popper] {
+          right: 0;
+          left: unset;
+        }
+      }
     }
     .navbar-collapse {
-        .nav-item {
-            margin-inline-end: 1rem;
-            .nav-link {
-                color: #5B6152;
-                font-family: "regular";
-            }
+      justify-content: space-between;
+      .nav-item {
+        margin-inline-end: .5rem;
+        .nav-link {
+          font-size: .8rem;
         }
+      }
     }
+  }
 }
+/* ======= Small laptop ======= */
+
+/* ======= Tablet ======= */
+@media only screen and (max-width: 991.98px) {
+  .navbar-top {
+    .container {
+      padding-inline-start: 0;
+    }
+  }
+  .navbar {
+    .navbar-brand {
+      .logo {
+        margin-top: 0;
+      }
+    }
+    .navbar-nav {
+      .dropdown-menu {
+        width: fit-content;
+        .dropdown-item {
+          font-size: .8rem;
+        }
+      }
+      .nav-item {
+        margin-bottom: .5rem;
+      }
+    }
+    .auth {
+      flex-direction: column;
+      align-items: start;
+      .btn {
+        margin-bottom: .5rem;
+      }
+      .lang {
+        .btn {
+          padding: .5rem 0;
+        }
+      }
+      .login_btn {
+        border-inline-end: transparent;
+        border-inline-start: transparent;
+        padding: .5rem 0;
+      }
+      .lang {
+        .dropdown-menu[data-bs-popper] {
+          right: unset;
+          left: 0;
+        }
+      }
+    }
+  }
+}
+/* ======= Tablet ======= */
+
+/* ======= Mobile ======= */
+@media only screen and (max-width: 600px) {
+  .navbar-top {
+    position: unset;
+    .container {
+      flex-direction: column;
+      .contact_details {
+        flex-direction: column;
+        .email {
+          border-inline-end: 0;
+          margin-bottom: .5rem;
+        }
+        .phone {
+          margin-inline-start: 0;
+          margin-top: .5rem;
+        }
+      }
+    }
+    .socialicon {
+      justify-content: center;
+      margin-top: .5rem;
+    }
+  }
+  .navbar {
+    margin-top: 0rem;
+  }
+}
+/* ======= Mobile ======= */
