--- a/sass/style.css
+++ b/sass/style.css
@@ -37,13 +37,24 @@ ul {
   top: 0;
   right: 0;
   left: 0;
-  padding: 1rem 0;
-  background-color: #F7F7F7;
+  padding: 0.5rem 0;
+  background-color: #f7f7f7;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 9;
 }
-.navbar-top .email {
+.navbar-top .container {
+  display: flex;
+  -webkit-padding-start: 20%;
+          padding-inline-start: 20%;
+  justify-content: space-between;
+}
+.navbar-top .contact_details {
+  display: flex;
+  align-items: center;
+}
+.navbar-top .contact_details .email {
   color: #7F7F73;
   font-size: 0.8rem;
   padding: 0 0.5rem;
@@ -54,20 +65,20 @@ ul {
   font-family: "regular";
   text-decoration: none;
 }
-.navbar-top .email svg {
+.navbar-top .contact_details .email svg {
   color: #A1CF5F;
   font-size: 1rem;
   -webkit-margin-end: 0.5rem;
           margin-inline-end: 0.5rem;
 }
-.navbar-top .url {
+.navbar-top .contact_details .url {
   padding: 0 0.5rem;
   color: #7F7F73;
   font-size: 0.8rem;
   font-family: "regular";
   text-decoration: none;
 }
-.navbar-top .phone {
+.navbar-top .contact_details .phone {
   -webkit-margin-start: 2rem;
           margin-inline-start: 2rem;
   color: #7F7F73;
@@ -78,16 +89,68 @@ ul {
   font-family: "regular";
   text-decoration: none;
 }
-.navbar-top .phone svg {
+.navbar-top .contact_details .phone svg {
   color: #A1CF5F;
   font-size: 1rem;
   -webkit-margin-end: 0.5rem;
           margin-inline-end: 0.5rem;
 }
+.navbar-top .socialicon {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 0;
+}
+.navbar-top .socialicon li {
+  list-style: none;
+  margin: 7px 0 !important;
+}
+.navbar-top .socialicon li a {
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid #A1CF5F;
+  text-align: center;
+  line-height: 25px;
+  font-size: 15px;
+  margin: 0 5px;
+  display: block;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+.navbar-top .socialicon li a .icon {
+  position: relative;
+  color: #A1CF5F;
+  transition: 0.5s;
+  z-index: 3;
+}
+.navbar-top .socialicon li a:hover {
+  background-color: #A1CF5F;
+}
+.navbar-top .socialicon li a:hover .icon {
+  color: #fff;
+  transform: rotateY(360deg);
+}
+.navbar-top .socialicon li a:hover :before {
+  top: 0;
+}
+.navbar-top .socialicon li a:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f00;
+  transition: 0.5s;
+  z-index: 2;
+}
 
 .navbar {
-  margin-top: 3rem;
+  margin-top: 3.5rem;
   position: relative;
+  z-index: 10;
 }
 .navbar .navbar-brand {
   -webkit-margin-end: 5rem;
@@ -97,13 +160,526 @@ ul {
   width: 100px;
   margin-top: -2rem;
 }
+.navbar .navbar-collapse {
+  justify-content: end;
+}
 .navbar .navbar-collapse .nav-item {
   -webkit-margin-end: 1rem;
           margin-inline-end: 1rem;
 }
 .navbar .navbar-collapse .nav-item .nav-link {
-  color: #5B6152;
+  color: #5b6152;
   font-family: "regular";
+}
+.navbar .navbar-collapse .nav-item .nav-link.dropdown-toggle::after {
+  transform: rotate(270deg);
+  color: #A1CF5F;
+}
+.navbar .navbar-collapse .nav-item .dropdown-menu .dropdown-item {
+  font-family: "regular";
+}
+.navbar .navbar-nav {
+  -webkit-margin-end: 2rem;
+          margin-inline-end: 2rem;
+}
+.navbar .auth {
+  display: flex;
+  align-items: center;
+}
+.navbar .auth .signup_btn {
+  color: #A1CF5F;
+  border-color: #A1CF5F;
+  padding: 0.5rem 1.5rem;
+  transition: 0.7s ease-in-out;
+  font-family: "regular";
+  -webkit-margin-end: 1rem;
+          margin-inline-end: 1rem;
+}
+.navbar .auth .signup_btn:hover {
+  background-color: #A1CF5F;
+  color: #fff;
+  transition: 0.7s ease-in-out;
+}
+.navbar .auth .login_btn {
+  color: #1C2410;
+  font-family: "regular";
+  -webkit-border-end: 1px solid #bfbfbf;
+          border-inline-end: 1px solid #bfbfbf;
+  -webkit-border-start: 1px solid #bfbfbf;
+          border-inline-start: 1px solid #bfbfbf;
+  border-radius: 0;
+  padding: 0.5rem 1.5rem;
+  -webkit-margin-end: 1rem;
+          margin-inline-end: 1rem;
+}
+.navbar .auth .login_btn:hover {
+  border-color: transparent;
+  -webkit-border-end: 1px solid #bfbfbf;
+          border-inline-end: 1px solid #bfbfbf;
+  -webkit-border-start: 1px solid #bfbfbf;
+          border-inline-start: 1px solid #bfbfbf;
+}
+.navbar .auth .lang .dropdown-toggle:hover {
+  border-color: transparent;
+}
+.navbar .auth .lang .dropdown-toggle.show, .navbar .auth .lang .dropdown-toggle:active {
+  border-color: transparent;
+}
+.navbar .auth .lang .dropdown-toggle.show:focus, .navbar .auth .lang .dropdown-toggle:active:focus {
+  box-shadow: unset;
+}
+.navbar .auth .lang .dropdown-menu .dropdown-item {
+  font-family: "regular";
+  font-size: 0.8rem;
+}
+
+/* ======= Small laptop ======= */
+@media only screen and (max-width: 1200px) {
+  .navbar .container {
+    max-width: 100%;
+  }
+  .navbar .navbar-brand {
+    -webkit-margin-end: 1rem;
+            margin-inline-end: 1rem;
+  }
+  .navbar .navbar-nav {
+    -webkit-margin-end: 1rem;
+            margin-inline-end: 1rem;
+  }
+  .navbar .auth .lang .dropdown-menu[data-bs-popper] {
+    right: 0;
+    left: unset;
+  }
+  .navbar .navbar-collapse {
+    justify-content: space-between;
+  }
+  .navbar .navbar-collapse .nav-item {
+    -webkit-margin-end: 0.5rem;
+            margin-inline-end: 0.5rem;
+  }
+  .navbar .navbar-collapse .nav-item .nav-link {
+    font-size: 0.8rem;
+  }
+}
+/* ======= Small laptop ======= */
+/* ======= Tablet ======= */
+@media only screen and (max-width: 991.98px) {
+  .navbar-top .container {
+    -webkit-padding-start: 0;
+            padding-inline-start: 0;
+  }
+  .navbar .navbar-brand .logo {
+    margin-top: 0;
+  }
+  .navbar .navbar-nav .dropdown-menu {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .navbar .navbar-nav .dropdown-menu .dropdown-item {
+    font-size: 0.8rem;
+  }
+  .navbar .navbar-nav .nav-item {
+    margin-bottom: 0.5rem;
+  }
+  .navbar .auth {
+    flex-direction: column;
+    align-items: start;
+  }
+  .navbar .auth .btn {
+    margin-bottom: 0.5rem;
+  }
+  .navbar .auth .lang .btn {
+    padding: 0.5rem 0;
+  }
+  .navbar .auth .login_btn {
+    -webkit-border-end: transparent;
+            border-inline-end: transparent;
+    -webkit-border-start: transparent;
+            border-inline-start: transparent;
+    padding: 0.5rem 0;
+  }
+  .navbar .auth .lang .dropdown-menu[data-bs-popper] {
+    right: unset;
+    left: 0;
+  }
+}
+/* ======= Tablet ======= */
+/* ======= Mobile ======= */
+@media only screen and (max-width: 600px) {
+  .navbar-top {
+    position: unset;
+  }
+  .navbar-top .container {
+    flex-direction: column;
+  }
+  .navbar-top .container .contact_details {
+    flex-direction: column;
+  }
+  .navbar-top .container .contact_details .email {
+    -webkit-border-end: 0;
+            border-inline-end: 0;
+    margin-bottom: 0.5rem;
+  }
+  .navbar-top .container .contact_details .phone {
+    -webkit-margin-start: 0;
+            margin-inline-start: 0;
+    margin-top: 0.5rem;
+  }
+  .navbar-top .socialicon {
+    justify-content: center;
+    margin-top: 0.5rem;
+  }
+  .navbar {
+    margin-top: 0rem;
+  }
+}
+/* ======= Mobile ======= */
+/* ======= footer ======= */
+footer {
+  background-color: rgba(141, 181, 83, 0.1);
+  margin-top: 3rem;
+  padding-top: 3%;
+}
+footer .logo-col {
+  text-align: start;
+}
+footer .logo-col img {
+  width: 35%;
+  display: block;
+}
+footer .logo-col ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
+footer .logo-col ul li {
+  margin: 10px 0;
+}
+footer .logo-col ul li img {
+  width: 35px;
+}
+footer .logo-col ul li:last-child a {
+  direction: ltr;
+  unicode-bidi: embed;
+  font-family: cursive;
+}
+footer .logo-col p {
+  color: #343434;
+  text-align: center;
+  font-family: "semibold";
+}
+footer .logo-col .subscribe_form {
+  width: 100%;
+}
+footer .logo-col .subscribe_form .form-group {
+  position: relative;
+}
+footer .logo-col .subscribe_form .form-group input {
+  color: #BEC2B8;
+  font-family: "regular";
+  font-size: 0.8rem;
+  padding: 0.75rem 1rem;
+  border-radius: 35px;
+  border: transparent;
+}
+footer .logo-col .subscribe_form .form-group input:focus {
+  box-shadow: unset;
+}
+footer .logo-col .subscribe_form .form-group .btn {
+  position: absolute;
+  right: 3%;
+  top: 0.25rem;
+  background-color: #A1CF5F;
+  color: #fff;
+  border-radius: 50%;
+  height: 35px;
+  width: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.7s ease-in-out;
+}
+footer .logo-col .subscribe_form .form-group .btn:hover {
+  border: 1px solid #A1CF5F;
+  background-color: transparent;
+  color: #A1CF5F;
+  transition: 0.7s ease-in-out;
+}
+footer .logo-col .payment_footer {
+  display: flex;
+  margin-top: 1rem;
+}
+footer .logo-col .payment_footer img {
+  height: 25px;
+  width: 50px;
+  -webkit-margin-end: 0.5rem;
+          margin-inline-end: 0.5rem;
+}
+footer .col-links {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 10px 0;
+  justify-content: flex-start;
+}
+footer .col-links p {
+  color: #222222;
+  font-family: "semibold";
+  text-align: start;
+  margin: 0;
+  font-size: 1.5rem;
+  margin-top: 0.5rem;
+}
+footer .col-links span,
+footer .col-links a {
+  font-family: "regular";
+  color: #000b33;
+  width: 100%;
+  display: block;
+  font-size: 0.9rem;
+  text-decoration: none;
+}
+footer .col-links .h3 {
+  margin-bottom: 15px;
+  font-size: 1.5rem;
+  color: #0c1321;
+  font-family: "bold";
+  position: relative;
+}
+footer .col-links ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: start;
+}
+footer .col-links ul li {
+  margin: 15px 0;
+  display: table;
+}
+footer .col-links ul li svg {
+  margin: 0 2%;
+}
+footer .col-links ul li a {
+  text-decoration: none;
+  color: var(--color-fouth);
+  font-family: "regular";
+  font-size: 1rem;
+}
+footer .col-links ul li span {
+  color: #223140;
+  font-family: regular;
+  font-size: 16px;
+}
+footer .col-links:last-child ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: start;
+}
+footer .accordion .nav-link {
+  float: none;
+  color: #fff;
+  font-family: "regular";
+}
+footer .contact {
+  margin-top: 0;
+}
+footer .contact p {
+  font-family: "light";
+  color: #70798b;
+  text-align: start;
+  font-size: 0.8rem;
+  width: 90%;
+}
+footer .contact ul {
+  flex-direction: row;
+}
+footer .contact ul li svg {
+  width: 1.2rem !important;
+  margin-left: 0.5rem;
+  color: var(--color-secound);
+}
+footer .contact ul li span {
+  font-family: "regular";
+  color: #fff;
+  text-decoration: none;
+}
+footer .contact ul li a {
+  font-family: "regular";
+  color: #fff;
+  text-decoration: none;
+}
+footer .footer-bottom {
+  padding: 10px 0;
+  margin-top: 30px;
+  width: 100%;
+  font-family: "semibold";
+  border-top: 0.7px solid #c3d4ab;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #000;
+}
+footer .footer-bottom .item {
+  text-align: start;
+}
+footer .footer-bottom .item p {
+  color: #223140;
+  display: inline-block;
+  font-size: 1rem;
+}
+footer .footer-bottom .item p .alina {
+  color: var(--color-secound);
+  font-size: 1rem;
+}
+footer .footer-bottom .item a {
+  text-decoration: none;
+}
+footer .footer-bottom .item h6 {
+  font-size: 1.3rem;
+  color: #223140;
+}
+footer .footer-bottom .item span {
+  font-size: 1.2rem;
+  color: #223140;
+}
+footer .footer-bottom .my-heart {
+  -webkit-animation: hvr-pulse 0.3s infinite;
+          animation: hvr-pulse 0.3s infinite;
+}
+footer .footer-bottom .socialicon {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 0;
+}
+footer .footer-bottom .socialicon li {
+  list-style: none;
+  margin: 7px 0 !important;
+}
+footer .footer-bottom .socialicon li a {
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid #A1CF5F;
+  text-align: center;
+  line-height: 30px;
+  font-size: 15px;
+  margin: 0 5px;
+  display: block;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+footer .footer-bottom .socialicon li a .icon {
+  position: relative;
+  color: #A1CF5F;
+  transition: 0.5s;
+  z-index: 3;
+}
+footer .footer-bottom .socialicon li a:hover {
+  background-color: #A1CF5F;
+}
+footer .footer-bottom .socialicon li a:hover .icon {
+  color: #fff;
+  transform: rotateY(360deg);
+}
+footer .footer-bottom .socialicon li a:hover :before {
+  top: 0;
+}
+footer .footer-bottom .socialicon li a:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f00;
+  transition: 0.5s;
+  z-index: 2;
+}
+footer .email {
+  position: relative;
+  height: 50px;
+}
+footer .email input {
+  height: 100%;
+  font-size: 14px;
+  font-family: "regular";
+  border-radius: 8px;
+}
+footer .email button {
+  position: absolute;
+  top: 15%;
+  left: 4%;
+  width: 3rem;
+  height: 2.2rem;
+  fill: #fff;
+  background-color: var(--color-secound);
+  padding: 2%;
+  border-radius: 8px;
+}
+footer .email button svg {
+  width: 2rem;
+  height: 1.5rem;
+  position: absolute;
+  top: 15%;
+  left: 15%;
+}
+
+/* ======= footer ======= */
+.float {
+  width: 50px;
+  height: 50px;
+  background-color: #25D366;
+  z-index: 999;
+  position: fixed;
+  bottom: 2%;
+  right: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.float svg {
+  color: #fff;
+  font-size: 1.8rem;
+}
+
+.header {
+  height: 80vh;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+.header video, .header iframe {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: brightness(0.7);
+}
+.header .text_header {
+  position: absolute;
+  width: 80%;
+  margin: 0 10%;
+}
+.header .text_header h1 {
+  width: 50%;
+  font-family: "bold";
+  color: #fff;
+}
+.header .text_header p {
+  width: 40%;
+  font-family: "regular";
+  color: #fff;
+}
+.header .offers_header {
+  position: absolute;
+  right: 0;
+  width: 30%;
 }
 
 /* ======= 4K style ======= */
