--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@ $PrimaryColor: #A1CF5F;
 $SecondColor: #A1CF5F;
 $PrimaryText: #1C2410;
 $SecondText: #7F7F73;
+$BackgroundColor: rgba(141, 181, 83, .1);
 
 @font-face {
   font-family: "light";
@@ -41,6 +42,60 @@ ul {
 @import "./navBar.scss";
 @import "./footer.scss";
 
+.float {
+  width: 50px;
+  height: 50px;
+  background-color: #25D366
+  ;
+  z-index: 999;
+  position: fixed;
+  bottom: 2%;
+  right: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  svg {
+    color: #fff;
+    font-size: 1.8rem;
+  }
+}
+
+// Start header
+.header {
+  height: 80vh;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  video, iframe {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    filter: brightness(.7);
+  }
+  .text_header {
+    position: absolute;
+    width: 80%;
+    margin: 0 10%;
+    h1 {
+      width: 50%;
+      font-family: "bold";
+      color: #fff;
+    }
+    p {
+      width: 40%;
+      font-family: "regular";
+      color: #fff
+    }
+  }
+  .offers_header {
+    position: absolute;
+    right: 0;
+    width: 30%;
+  }
+}
+// End header
 
 
 @import "./_responsive.scss";
