--- a/sass/style.scss
+++ b/sass/style.scss
@@ -73,6 +73,7 @@ ul {
     width: 100%;
     object-fit: cover;
     filter: brightness(.7);
+    z-index: -1;
   }
   .text_header {
     position: absolute;
@@ -96,6 +97,61 @@ ul {
   }
 }
 // End header
+
+// Start reservation info
+.reservation_info {
+  z-index: 999;
+  margin-top: -4rem;
+  form {
+    background-color: #fff;
+    box-shadow: -15px 30px 60px rgba(142, 142, 142, .16);
+    border-radius: 14px;
+    padding: 1.5rem;
+    h6 {
+      font-family: "bold";
+      color: $PrimaryText;
+      margin-bottom: 1rem
+    }
+    .form-group {
+      margin-bottom: 1rem;
+      .bootstrap-select {
+        .dropdown-toggle {
+          background-color: transparent;
+          border-radius: 4px;
+          border: .7px solid #C2C2C2;
+          padding: .75rem;
+          .filter-option {
+            .filter-option-inner {
+              font-size: .8rem;
+              font-family: "regular";
+            }
+          }
+        }
+        .dropdown-menu {
+          .dropdown-item {
+            font-family: "regular";
+            font-size: .8rem;
+          }
+        }
+      }
+    }
+    .submit_btn {
+      width: 100%;
+      background-color: $PrimaryColor;
+      color: #fff;
+      font-family: "bold";
+      transition: .7s ease-in-out;
+      &:hover {
+        border-color: transparent;
+        background-color: transparent;
+        color: $PrimaryColor;
+        border: 1px solid $PrimaryColor;
+        transition: .7s ease-in-out;
+      }
+    }
+  }
+}
+// End reservation info
 
 
 @import "./_responsive.scss";
