--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -1,5 +1,20 @@
 /* ======= Mobile ======= */
   @media only screen and (max-width: 600px) {
-  
+    .form_sign .collection .content label.box{
+      width: 52%;
+
+    }
+    .form_sign .collection .content{
+      justify-content: center;
+    }
+    .form_sign .input-group .form-control{
+      padding-inline-start: 12%;
+    }
+    .form_sign p.term {
+      font-size: .8rem;
+    }
+    footer .footer-bottom .socialicon{
+      justify-content: center;
+    }
 }
 /* ======= Mobile ======= */
