--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,8 @@
-$PrimaryColor: #A1CF5F;
-$SecondColor: #A1CF5F;
-$PrimaryText: #1C2410;
-$SecondText: #7F7F73;
-$BackgroundColor: rgba(141, 181, 83, .1);
+$PrimaryColor: #a1cf5f;
+$SecondColor: #a1cf5f;
+$PrimaryText: #1c2410;
+$SecondText: #7f7f73;
+$BackgroundColor: rgba(141, 181, 83, 0.1);
 
 @font-face {
   font-family: "light";
@@ -29,8 +29,8 @@ body {
   direction: ltr;
 }
 .btn {
-  padding: .75rem;
-  font-size: .8rem;
+  padding: 0.75rem;
+  font-size: 0.8rem;
 }
 ul {
   padding: 0;
@@ -45,8 +45,7 @@ ul {
 .float {
   width: 50px;
   height: 50px;
-  background-color: #25D366
-  ;
+  background-color: #25d366;
   z-index: 999;
   position: fixed;
   bottom: 2%;
@@ -68,11 +67,12 @@ ul {
   display: flex;
   align-items: center;
   justify-content: start;
-  video, iframe {
+  video,
+  iframe {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    filter: brightness(.7);
+    filter: brightness(0.7);
     z-index: -1;
   }
   .text_header {
@@ -87,7 +87,7 @@ ul {
     p {
       width: 40%;
       font-family: "regular";
-      color: #fff
+      color: #fff;
     }
   }
   .offers_header {
@@ -104,13 +104,13 @@ ul {
   margin-top: -4rem;
   form {
     background-color: #fff;
-    box-shadow: -15px 30px 60px rgba(142, 142, 142, .16);
+    box-shadow: -15px 30px 60px rgba(142, 142, 142, 0.16);
     border-radius: 14px;
     padding: 1.5rem;
     h6 {
       font-family: "bold";
       color: $PrimaryText;
-      margin-bottom: 1rem
+      margin-bottom: 1rem;
     }
     .form-group {
       margin-bottom: 1rem;
@@ -118,11 +118,11 @@ ul {
         .dropdown-toggle {
           background-color: transparent;
           border-radius: 4px;
-          border: .7px solid #C2C2C2;
-          padding: .75rem;
+          border: 0.7px solid #c2c2c2;
+          padding: 0.75rem;
           .filter-option {
             .filter-option-inner {
-              font-size: .8rem;
+              font-size: 0.8rem;
               font-family: "regular";
             }
           }
@@ -130,7 +130,7 @@ ul {
         .dropdown-menu {
           .dropdown-item {
             font-family: "regular";
-            font-size: .8rem;
+            font-size: 0.8rem;
           }
         }
       }
@@ -140,7 +140,148 @@ ul {
       background-color: $PrimaryColor;
       color: #fff;
       font-family: "bold";
+      transition: 0.7s ease-in-out;
+      &:hover {
+        border-color: transparent;
+        background-color: transparent;
+        color: $PrimaryColor;
+        border: 1px solid $PrimaryColor;
+        transition: 0.7s ease-in-out;
+      }
+    }
+  }
+}
+// End reservation info
+
+// Start services
+.services {
+  margin-top: 5rem;
+  .title_head {
+    font-family: "bold";
+    color: $PrimaryText;
+    text-align: center;
+  }
+  .text_section {
+    font-family: "regular";
+    color: $SecondText;
+    font-size: 0.9rem;
+    text-align: center;
+    width: 30%;
+    margin: 0 auto 3rem;
+  }
+  .card_service {
+    border: 0.5px solid #c1c1c1;
+    border-radius: 8px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    .img_card {
+      width: 100%;
+      border-radius: 8px 8px 0 0;
+    }
+    .title_card {
+      font-family: "semibold";
+      color: $PrimaryText;
+      margin: 1rem auto 0.5rem;
+      width: 90%;
+    }
+    .text_card {
+      font-family: "regular";
+      color: $SecondText;
+      font-size: 0.8rem;
+      width: 90%;
+      margin: 0 auto 1rem;
+    }
+    .btn {
+      background-color: transparent;
+      border: 1px solid $PrimaryColor;
+      color: $PrimaryColor;
+      font-family: "semibold";
+      font-size: 0.8rem;
+      padding: 0.6rem;
+      border-radius: 180px;
+      width: 90%;
+      display: block;
+      margin: auto auto 1rem;
+      transition: 0.7s ease-in-out;
+      &:hover {
+        background-color: $PrimaryColor;
+        color: #fff;
+        transition: 0.7s ease-in-out;
+      }
+    }
+  }
+}
+// End services
+
+// Start statistics
+.statistics {
+  margin-top: 5rem;
+  .wonderful_section {
+    background-color: $PrimaryColor;
+    padding: 5rem;
+    height: 100%;
+    .wonderful_title {
+      font-family: "bold";
+      color: #fff;
+    }
+    .wonderful_text {
+      font-family: "regular";
+      color: #fff;
+      margin-bottom: 2rem;
+    }
+    .statistics_card {
+      display: inline-flex;
+      align-items: center;
+      width: 49%;
+      margin-bottom: 1rem;
+      svg {
+        background-color: #fff;
+        color: $PrimaryColor;
+        padding: .7rem;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        margin-inline-end: 1rem;
+      }
+      .statistics_text {
+        .statistics_number {
+          margin-bottom: 0;
+          color: #fff;
+          font-family: "bold";
+          font-size: 1.5rem
+        }
+        .statistics_object {
+          color: #fff;
+          font-family: "regular";
+        }
+      }
+    }
+  }
+  .miswak_academy {
+    background-color: #F5FAEF;
+    padding: 5rem;
+    height: 100%;
+    .title {
+      font-family: "bold";
+      color: $PrimaryText;
+    }
+    .text {
+      font-family: "regular";
+      color: $SecondText;
+      margin-bottom: 2rem;
+    }
+    img {
+      width: 350px;
+      margin-inline-end: 1rem;
+    }
+    .join_btn {
+      background-color: $PrimaryColor;
+      color: #fff;
+      font-family: "semibold";
       transition: .7s ease-in-out;
+      width: 30%;
+      border-radius: 35px;
       &:hover {
         border-color: transparent;
         background-color: transparent;
@@ -151,7 +292,104 @@ ul {
     }
   }
 }
-// End reservation info
+// End statistics
 
+// Start Doctors
+.doctors {
+  margin-top: 3rem;
+  .sub_title {
+    color: $PrimaryColor;
+    font-family: "regular";
+  }
+  .title {
+    font-family: "bold";
+    color: $PrimaryText;
+  }
+  .text {
+    font-family: "regular";
+    color: $SecondText;
+    width: 40%;
+    margin-bottom: 2rem;
+  }
+  .show_all {
+    background-color: $PrimaryColor;
+    color: #fff;
+    font-family: "regular";
+    border-radius: 180px;
+    font-size: .8rem;
+    padding: .6rem 1.5rem;
+    transition: .7s ease-in-out;
+    &:hover {
+      border-color: transparent;
+      background-color: transparent;
+      color: $PrimaryColor;
+      border: 1px solid $PrimaryColor;
+      transition: .7s ease-in-out;
+    }
+  }
+  .card_doctor {
+    box-shadow: 10px 30px 76px rgba(116, 116, 116, .16);
+    background-color: #fff;
+    display: inline-flex;
+    align-items: center;
+    width: 47%;
+    margin-inline-end: 2%;
+    margin-bottom: 2rem;
+    border-radius: 17px;
+    img {
+      width: 30%;
+      height: 100%;
+      margin-inline-end: 1rem;
+      border-radius: 17px 0 0 17px;
+    }
+    .description_doctor {
+      width: 70%;
+      .title {
+        color: $PrimaryText;
+        font-family: "semibold";
+      }
+      .specialize {
+        display: block;
+        font-family: "regular";
+        color: $SecondText;
+        font-size: .9rem;
+        margin-bottom: .5rem;
+      }
+      .address {
+        display: block;
+        font-family: "regular";
+        color: #5B6152;
+        font-size: .9rem;
+        margin-bottom: .5rem;
+      }
+      .rating {
+        margin-bottom: .5rem;
+        svg {
+          color: $SecondText;
+          &.active {
+            color: #D18927;
+          }
+        }
+      }
+      .booking {
+        color: $PrimaryColor;
+        background-color: transparent;
+        border: 1px solid $PrimaryColor;
+        font-family: "semibold";
+        font-size: .8rem;
+        padding: .6rem;
+        border-radius: 180px;
+        width: 60%;
+        transition: .7s ease-in-out;
+        &:hover {
+          background-color: $PrimaryColor;
+          color: #fff;
+          transition: .7s ease-in-out;
+        }
+      }
+    }
+  }
+}
+// End Doctors
 
 @import "./_responsive.scss";
