--- a/sass/style.scss
+++ b/sass/style.scss
@@ -549,6 +549,14 @@ a {
     }
     .form-group {
       margin-bottom: 1rem;
+      position: relative;
+      svg {
+        color: $SecondText;
+        position: absolute;
+        top: 30%;
+        z-index: 5;
+        left: 0.5rem;
+      }
       .bootstrap-select {
         .dropdown-toggle {
           background-color: transparent;
@@ -559,6 +567,7 @@ a {
             .filter-option-inner {
               font-size: 0.8rem;
               font-family: "regular";
+              margin-inline-start: 1rem;
             }
           }
         }
@@ -826,6 +835,421 @@ a {
   }
 }
 // End Doctors
+
+// Start opinions
+.opinions {
+  background-color: $BackgroundColor;
+  margin-top: 5rem;
+  padding: 3rem 0;
+  position: relative;
+  h3 {
+    font-family: "semibold";
+    color: $PrimaryText;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+  .swiper {
+    width: 100%;
+    height: 100%;
+    position: unset;
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+      .opinion_card {
+        background: #fff;
+        border-radius: 20px;
+        padding: 1.5rem 2.5rem;
+        text-align: start;
+        .quote {
+          background-color: $PrimaryColor;
+          color: #fff;
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          padding: 1rem;
+        }
+        .text_opinion {
+          font-size: .9rem;
+          font-family: "regular";
+          margin: .5rem 0;
+          color: $PrimaryText;
+        }
+        .person {
+          display: flex;
+          align-items: center;
+          margin-top: .5rem;
+          padding-top: .5rem;
+          img {
+            width: 50px;
+            height: 50px;
+            margin-inline-end: 1rem;
+            border-radius: 50%;
+          }
+          .name {
+            .text_person {
+              margin-bottom: 0;
+              font-family: "regular";
+              font-size: .8rem;
+              color: $PrimaryText;
+            }
+            .rating {
+              svg {
+                font-size: .8rem;
+                color: transparent;
+                  stroke-width: 60px;
+                  stroke: #D18927;
+                &.active {
+                  color: #D18927;
+                }
+              }
+            }
+          }
+        }
+      }
+      &.swiper-slide-active {
+        .opinion_card {
+          background-color: $PrimaryColor;
+          .quote {
+            background-color: #fff;
+            color: $PrimaryColor;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            padding: 1rem;
+          }
+          .text_opinion {
+            color: #fff;
+          }
+          .person {
+            .name {
+              .text_person {
+                color: #fff;
+              }
+              .rating {
+                svg {
+                  font-size: .8rem;
+                  color: transparent;
+                  stroke-width: 60px;
+                  stroke: #fff;
+                  &.active {
+                    color: #fff;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .swiper-pagination-clickable .swiper-pagination-bullet {
+      background-color: rgba(8, 20, 32, .15);
+      width: 20px;
+      height: 5px;
+      opacity: 1;
+      border-radius: 0;
+    }
+    .swiper-pagination-clickable .swiper-pagination-bullet-active {
+      background-color: $PrimaryColor !important;
+    }
+  }
+}
+// End opinions
+
+// Start partners
+.partners {
+  margin-top: 3rem;
+  .swiper {
+    width: 100%;
+    height: 100%;
+    .swiper-slide {
+      text-align: center;
+  
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+
+
+}
+// End partners
+
+// Start doctor header
+.doctor_header {
+  background-color: #F7F7F7;
+  h2 {
+    font-family: "semibold";
+    color: $PrimaryText;
+    width: 60%;
+    margin-bottom: 1rem;
+  }
+  p {
+    font-family: "regular";
+    color: $SecondText;
+    width: 60%;
+    margin-bottom: 0;
+  }
+  img {
+    width: 400px;
+    margin-inline-start: auto;
+    display: block;
+  }
+}
+// End doctor header
+
+// Start booking information
+.booking_information {
+  .container {
+    background-color: $PrimaryColor;
+    padding: 1.5rem;
+    border-radius: 15px;
+    h5 {
+      font-family: "semibold";
+      color: #fff;
+      margin-bottom: 1rem;
+    }
+    .form-group {
+      position: relative;
+      svg {
+        color: $SecondText;
+        position: absolute;
+        top: 30%;
+        z-index: 5;
+        left: 0.5rem;
+      }
+      .bootstrap-select {
+        .dropdown-toggle {
+          background-color: transparent;
+          border-radius: 4px;
+          border: 0.7px solid #c2c2c2;
+          padding: 0.75rem;
+          .filter-option {
+            .filter-option-inner {
+              font-size: 0.8rem;
+              font-family: "regular";
+              margin-inline-start: 1rem;
+            }
+          }
+        }
+        .dropdown-menu {
+          .dropdown-item {
+            font-family: "regular";
+            font-size: 0.8rem;
+          }
+        }
+      }
+    }
+  }
+}
+// End booking information
+
+// Start choose doctor
+.choose_doctor {
+  margin-top: 2rem;
+  h5 {
+    font-family: "bold";
+    color: $PrimaryText;
+  }
+  .sorting {
+    display: flex;
+    align-items: center;
+    label {
+      font-family: "regular";
+      font-size: .8rem;
+      color: $SecondText;
+      margin-inline-end: .5rem;
+    }
+    .bootstrap-select {
+      .dropdown-toggle {
+        background-color: #F7F7F7;
+        border-radius: 4px;
+        border: transparent;
+        padding: 0.75rem;
+        .filter-option {
+          .filter-option-inner {
+            font-size: 0.8rem;
+            font-family: "regular";
+            color: $PrimaryText;
+          }
+        }
+      }
+      .dropdown-menu {
+        .dropdown-item {
+          font-family: "regular";
+          font-size: 0.8rem;
+        }
+      }
+    }
+  }
+  .card_booking_doctor {
+    display: flex;
+    border: .7px solid #BDBDBD;
+    margin-bottom: 1.5rem;
+    border-radius: 12px;
+    img {
+      width: 30%;
+      height: 370px;
+      border-radius: 12px 0 0 12px;
+    }
+    .details_doctor {
+      padding: 3rem;
+      width: 40%;
+      border-inline-end: .7px solid #BDBDBD;
+      .name {
+        font-family: "semibold";
+        color: $PrimaryText;
+      }
+      .description {
+        font-family: "regular";
+        color: $SecondText;
+        font-size: .8rem;
+      }
+      .rating {
+        margin-bottom: 1rem;
+        svg {
+          font-size: .8rem;
+          color: transparent;
+            stroke-width: 60px;
+            stroke: #D18927;
+          &.active {
+            color: #D18927;
+          }
+        }
+        span {
+          font-family: "regular";
+          font-size: .8rem;
+          color: $SecondText;
+          margin-inline-start: .5rem;
+        }
+      }
+      .address, .time, .fees {
+        margin-bottom: 1rem;
+        font-family: "regular";
+        color: $PrimaryText;
+        font-size: .9rem;
+        svg {
+          color: $PrimaryColor;
+          width: 15px;
+          height: 15px;
+          margin-inline-end: .5rem;
+        }
+      }
+    }
+    .booking_time {
+      width: 30%;
+      padding: 3rem;
+      position: relative;
+      .title {
+        font-family: 'semibold';
+        color: $PrimaryText;
+        font-size: 1.3rem;
+      }
+      .swiper {
+        position: unset;
+        .swiper-slide {
+          .day {
+            background-color: #8194E2;
+            color: #fff;
+            border-radius: 5px;
+            width: 100%;
+            padding: .5rem;
+            margin-bottom: .5rem;
+            font-family: "regular";
+            text-align: center;
+            font-size: .8rem;
+          }
+          ul {
+            margin-bottom: 0;
+            list-style: none;
+            .form-check {
+              padding-left: 0;
+              margin-bottom: .5rem;
+              .form-check-label {
+                background-color: #F0F0F0;
+                color: #5B6152;
+                font-family: "regular";
+                border-radius: 5px;
+                padding: 0.5rem;
+                width: 100%;
+                text-align: center;
+                font-size: .8rem;
+                border: 1px solid #F0F0F0;
+              }
+              .form-check-input {
+                display: none;
+                &:checked ~ .form-check-label {
+                  border: 1px solid #000;
+                }
+              }
+            }
+          }
+          .book {
+            .btn {
+              font-family: "semibold";
+              background-color: #A1CF5F;
+              border-radius: 5px;
+              color: #fff;
+              padding: .5rem;
+              width: 100%;
+              font-size: .8rem;
+              transition: .7s ease-in-out;
+              &:hover {
+                border-color: transparent;
+                transition: .7s ease-in-out;
+                background-color: transparent;
+                border: 1px solid #A1CF5F;
+                color: #A1CF5F;
+              }
+            }
+          }
+        }
+        .swiper-button-next, .swiper-button-prev {
+          border-radius: 50%;
+          border: .7px solid #BDBDBD;
+          width: 30px;
+          height: 30px;
+          top: 55%;
+          svg {
+            color: #A1CF5F;
+          }
+          &::after {
+            content: unset;
+          }
+        }
+      }
+    }
+  }
+}
+// End choose doctor
 
 //start about us page
 .header_about_us{
