fix merge conflict

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -141,7 +141,7 @@ a {
       font-size: 1rem;
       color: $PrimaryText;
       font-family: "semibold";
-      margin-inline-end: 1rem;
+      margin-inline-end: .5rem;
     }
   }
 }
@@ -1300,6 +1300,7 @@ a {
     }
   }
 }
+
 .aboutus_card {
   padding: 5% 0;
   position: relative;
@@ -1380,6 +1381,7 @@ a {
     }
   }
 }
+
 .couner_aboutus {
   padding: 3% 0;
   .boxes {
@@ -1423,6 +1425,7 @@ a {
     }
   }
 }
+
 .best_dector_aboutus {
   padding: 5% 0;
   position: relative;
